--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=3000
 spring.datasource.url=jdbc:mysql://localhost:3306/bankingapp
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Gaby-Dev*2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
